data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_548.wast
;; 9. **Test Description**: Configure a loop that has a conditional `br_if` with operand consumption leading to condition always being `true`, ensuring loop body never exits.    **Constraint Checked**: Operand stack management during condition evaluation.    **Relation to Infinite Loops**: Validates operand handling so that an infinite loop doesn't occur due to continual `true` conditions from stack mismanagement.

(assert_invalid
  (module
    (func $conditional-loop
      (i32.const 1)
      (loop (result i32)
        (br_if 0)
      )
    )
  )
  "type mismatch"
)